--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*   
-Theme Name: The HTML5 Reset Theme
-Theme URI: http://html5reset.org
-Description: A style-free theme to get you started on an HTML5-based WordPress theme of your own.
-Author: Monkey Do! + @ckhicks
-Author URI: http://monkeydo.biz
-Version: 2.0
+Theme Name: fundacompucesco-theme
+Theme URI: 
+Description: 
+Author: Alejandro Romero
+Author URI: github.com/alejo8591
+Version: 1.0
 */
 
 /* Apply a natural box layout model to all elements: http://paulirish.com/2012/box-sizing-border-box-ftw/ */
